	* DNS SRV records with equal priority are sorted with respect to their
	  weight as specified in RFC 2782.  (Vijay Raghunathan)
	* GnuTLS logging (disabled by default) can be controlled through the
	  PURPLE_GNUTLS_DEBUG environment variable, which is an integer between
	  0 and 9 (higher is more verbose). Higher values may reveal sensitive
	  information.
	* PURPLE_VERBOSE_DEBUG environment variable.  Currently this is an "on" or
	  "off" variable.  Set it to any value to turn it on and unset it to turn
	  it off.  This will optionally be used to only show less useful debug
	  information on an as-needed basis.
	* Add support for receiving handwritten (ink) messages on MSN.
	* Don't do IPv6 address lookups if the computer does not have an IPv6
	  address configured.
	* Add support for receiving audio clips on MSN.
	* Fix a leak when the UI provides its own DNS resolving UI op.
	  (Aman Gupta)
	* Don't fork a DNS resolver process to resolve IP addresses.  (Aman Gupta)
	* Show the invite message for buddies that requested authorization
	  from you on MSN.
	* Support sending an invite message to buddies when requesting authorization
	  from them on MSN.
	* Better handling of corrupt certificates in the TLS Peers cache.
	* More efficient purple_find_buddies() and purple_find_group() functions.
	  (Jan Kaluza and Aman Gupta)

	AIM and ICQ:
	* Preliminary support for a new authentication scheme called
	  "clientLogin."
	* Fixed a bug where your away message sometimes would not get set when
	  you first sign on.
	* Make sure links in your away messages show up as links to other people.
	* For ICQ, Never change the privacy setting specified by the user.

	Gadu-Gadu:
	* Accounts can specify a server to which to connect.
	  (Krzysztof "kreez" Tobola)
	* Correctly show tooltip status for contacts with status messages.
	  (Krzysztof "kkszysiu" Klinikowski)
	* Support for fetching buddy icons.  (Krzysztof "kkszysiu" Klinikowski)